--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,6 +6,37 @@
     <title>Home</title>
   </head>
   <body>
-    This is a test run
+    <form action="/action_page.php">
+    Enter the route number combinations: <input type="text">
+    <input type="submit" value="Add new route"><br>
+    <input type="submit" value="Submit"><br>
+    </form>
+    <form action="/action_page.php">
+    Enter the Start Name combinations: <input type="text">
+    <input type="submit" value="Add new route"><br>
+    Enter the Stop Name combinations: <input type="text">
+    <input type="submit" value="Add new route"><br>
+    <input type="submit" value="Submit"><br>
+    </form>
+    <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+  <h2>Button Styles</h2>
+  <button type="button" class="btn">Basic</button>
+  <button type="button" class="btn btn-default">Default</button>
+  <button type="button" class="btn btn-primary">Primary</button>
+  <button type="button" class="btn btn-success">Success</button>
+  <button type="button" class="btn btn-info">Info</button>
+  <button type="button" class="btn btn-warning">Warning</button>
+  <button type="button" class="btn btn-danger">Danger</button>
+  <button type="button" class="btn btn-link">Link</button>
+</div>
   </body>
 </html>
