--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,18 +6,6 @@
     <title>Home</title>
   </head>
   <body>
-    <form action="/action_page.php">
-    Enter the route number combinations: <input type="text">
-    <input type="submit" value="Add new route"><br>
-    <input type="submit" value="Submit"><br>
-    </form>
-    <form action="/action_page.php">
-    Enter the Start Name combinations: <input type="text">
-    <input type="submit" value="Add new route"><br>
-    Enter the Stop Name combinations: <input type="text">
-    <input type="submit" value="Add new route"><br>
-    <input type="submit" value="Submit"><br>
-    </form>
     <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,15 +16,25 @@
 <body>
 
 <div class="container">
-  <h2>Button Styles</h2>
-  <button type="button" class="btn">Basic</button>
-  <button type="button" class="btn btn-default">Default</button>
-  <button type="button" class="btn btn-primary">Primary</button>
-  <button type="button" class="btn btn-success">Success</button>
-  <button type="button" class="btn btn-info">Info</button>
-  <button type="button" class="btn btn-warning">Warning</button>
-  <button type="button" class="btn btn-danger">Danger</button>
-  <button type="button" class="btn btn-link">Link</button>
-</div>
+  <h2>Horizontal form</h2>
+  <form class="form-horizontal" action="/action_page.php">
+    <div class="form-group">
+      <label class="control-label col-sm-2">Enter the route number combinations:</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2">Enter the Start Name combinations:</label>
+      <div class="col-sm-10">
+        <input type="password" class="form-control" >
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" class="btn btn-default">Submit</button>
+      </div>
+    </div>
+  </form>
   </body>
 </html>
