--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -16,18 +16,45 @@
 <body>
 
 <div class="container">
-  <h2>Horizontal form</h2>
   <form class="form-horizontal" action="/action_page.php">
     <div class="form-group">
       <label class="control-label col-sm-2">Enter the route number combinations:</label>
       <div class="col-sm-10">
-        <input type="email" class="form-control">
+        <input type="text" class="form-control">
+      </div>
+    </div>
+    <div class="input_fields_wrap">
+    <button class="add_field_button">Add More Fields</button>
+</div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" class="btn btn-default">Submit</button>
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2">Enter the Start Name combinations:</label>
       <div class="col-sm-10">
-        <input type="password" class="form-control" >
+        <input type="text" class="form-control" >
+      </div>
+    </div>
+    <div class="input_fields_wrap">
+    <button class="add_field_button">Add More Fields</button>
+</div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" class="btn btn-default">Submit</button>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2">Enter Bus running cost per minute:</label>
+      <div class="col-sm-10">
+        <input type="number" class="form-control" >
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2">Enter all fixed cost:</label>
+      <div class="col-sm-10">
+        <input type="number" class="form-control" >
       </div>
     </div>
     <div class="form-group">
