--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,67 +1,79 @@
 {%load static%}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Home</title>
-  </head>
-  <body>
-    <title>Bootstrap Example</title>
+
+<head>
+  <meta charset="utf-8">
+  <title>Home</title>
+</head>
+
+<body>
+  <title>Home</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-</head>
-<body>
+  </head>
 
-<div class="container">
-  <form class="form-horizontal" action="/action_page.php">
-    <div class="form-group">
-      <label class="control-label col-sm-2">Enter the route number combinations:</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control">
+  <body>
+
+    <div class="container">
+        <div class="form-group">
+          <label class="control-label col-sm-2">Enter the route number combinations:</label>
+          <form class="" method="POST">
+            <div class="col-sm-10">
+              <input type="numeric" class="form-control" name="route_number">
+            </div>
+            <button class="add_field_button" name="btnRoute_number">Add More Fields</button>
+            {%csrf_token%}
+          </form>
+        </div>
       </div>
-    </div>
-    <div class="input_fields_wrap">
-    <button class="add_field_button">Add More Fields</button>
-</div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">Submit</button>
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2">Enter the Start Name combinations:</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" >
-      </div>
-    </div>
-    <div class="input_fields_wrap">
-    <button class="add_field_button">Add More Fields</button>
-</div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">Submit</button>
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2">Enter Bus running cost per minute:</label>
-      <div class="col-sm-10">
-        <input type="number" class="form-control" >
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2">Enter all fixed cost:</label>
-      <div class="col-sm-10">
-        <input type="number" class="form-control" >
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">Submit</button>
-      </div>
-    </div>
-  </form>
+
+      <div class="container">
+          <div class="form-group">
+            <label class="control-label col-sm-2">Enter the Start Name combinations:</label>
+            <form class="" method="POST">
+              <div class="col-sm-10">
+                <input type="numeric" class="form-control" name="start_name">
+              </div>
+              <button class="add_field_button" name="btnStart_name">Add More Fields</button>
+              {%csrf_token%}
+            </form>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">Submit</button>
+          </div>
+        </div>
+
+        <div class="container">
+            <div class="form-group">
+              <label class="control-label col-sm-2">Enter Bus running cost per minute:</label>
+              <form class="" method="POST">
+                <div class="col-sm-10">
+                  <input type="numeric" class="form-control" name="cost_amount">
+                </div>
+                {%csrf_token%}
+              </form>
+            </div>
+          </div>
+
+          <div class="container">
+              <div class="form-group">
+                <label class="control-label col-sm-2">Enter all fixed cost:</label>
+                <form class="" method="POST">
+                  <div class="col-sm-10">
+                    <input type="numeric" class="form-control" name="cost_amount">
+                    <button class="add_field_button" name="btnCost_amount">Okay</button>
+                  </div>
+                  {%csrf_token%}
+                </form>
+              </div>
+            </div>
+            <h1>{{RealCost}}</h1>
   </body>
+
 </html>
