--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -45,7 +45,8 @@
         </div>
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Submit</button>
+            <form method="post">{% csrf_token %}
+            <input type="submit" name="final_btn"value="Submit">
           </div>
         </div>
 
